testdata/golden/align_list_attr_input.tf
resource "aws_security_group_rule" "alb_ingress" {
  from_port   = 443
  to_port     = 443
  cidr_blocks = [
    "10.0.0.0/8",
  ]
}
