testdata/golden/blanklines_expected.tf
resource "aws_instance" "web" {
  ami = "abc123"
}

resource "aws_instance" "db" {
  ami = "def456"
}
