testdata/golden/comment_before_resource_expected.tf
# ALB
resource "aws_security_group" "alb" {
  name        = "alb"
  description = "ALB security group"
}
